[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "latextable"
authors = [{name = "Joseph Early", email = "joseph.early.ai@gmail.com"}]
license = {text = "MIT"}
description = "An extension to the texttable library that exports tables directly to Latex."
keywords = ["table", "texttable", "latex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://github.com/JAEarly/latextable"}
dependencies = ["texttable"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
py-modules = ["latextable"]
include-package-data = false

[tool.setuptools_scm]
