[metadata]
name = latextable
author = Joseph Early
author_email = joseph.early.ai@gmail.com
license = MIT
description = An extension to the texttable library that exports tables directly to Latex.
keywords = table, texttable, latex
url = https://github.com/JAEarly/latextable
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
py_modules = latextable
install_requires = texttable
include_package_data = False
